--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,26 @@
 
 <ul>
   {{#each burgers}}
-     <li>{{this.id}} -{{this.burger_name}}-{{this.devoured}}</li>
+    {{#unless this.devoured}}
+       <li>{{this.id}}. {{this.burger_name}} <button class="devour-burger" data-id = "{{this.id}}"">Devour it!</button></li>
+    {{/unless}}
   {{/each}}
 </ul>
+
+<ul>
+  {{#each burgers}}
+    {{#if this.devoured}}
+       <li>{{this.id}}. {{this.burger_name}}</li>
+    {{/if}}
+  {{/each}}
+</ul>
+
+<form class="create-form">
+
+  <div class="form-group">
+    
+    <textarea id="burger" name="burger" rows="8" cols="40"></textarea>
+  </div>
+
+  <button type="submit">Submit</button>
+</form>
