--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,8 +1,20 @@
-
-
 li {
-    padding: 5px;
-    margin: 5px;
-    background: #faebd7;
-  }
-  
+  padding: 5px;
+  padding-left: 5px;
+  margin: 5px;
+  background: #faebd7;
+}
+
+ul {
+  list-style-type: none;
+}
+
+body,
+img {
+  background-color: burlywood;
+}
+
+img {
+  margin-top: 20px;
+}
+
