--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,27 +1,42 @@
-<h1>Burgers</h1>
-
-<ul>
-  {{#each burgers}}
-    {{#unless this.devoured}}
-       <li>{{this.id}}. {{this.burger_name}} <button class="devour-burger" data-id = "{{this.id}}"">Devour it!</button></li>
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<ul>
-  {{#each burgers}}
-    {{#if this.devoured}}
-       <li>{{this.id}}. {{this.burger_name}}</li>
-    {{/if}}
-  {{/each}}
-</ul>
-
-<form class="create-form">
-
-  <div class="form-group">
-    
-    <textarea id="burger" name="burger" rows="8" cols="40"></textarea>
+<div class="row">
+  <div class="col-sm-6">
+    <ul>
+      {{#each burgers}}
+      {{#unless this.devoured}}
+      <li>{{this.id}}. {{this.burger_name}} <button class="devour-burger  btn-warning float-right" data-id="{{this.id}}"">Devour it!</button></li>
+      {{/unless}}
+      {{/each}}
+    </ol>
   </div>
 
-  <button type="submit">Submit</button>
-</form>
+  <div class=" col-sm-6">
+
+          <ul>
+            {{#each burgers}}
+            {{#if this.devoured}}
+            <li>{{this.id}}. {{this.burger_name}}</li>
+            {{/if}}
+            {{/each}}
+          </ul>
+
+  </div>
+
+</div>
+
+
+<div class="row">
+  <div class="col-sm-12">
+    <div class="text-center">
+      <form class=" create-form">
+
+        <div class="form-group">
+          <textarea id="burger" name="burger" rows="5" cols="40" required></textarea>
+        </div>
+
+        <button type="submit" class="btn-primary">Submit</button>
+        <p> Enter a burger you want to eat and Click the "Submit" button.</p>
+      </form>
+
+    </div>
+  </div>
+</div>
