--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="/assets/css/burger_style.css" type="text/css" />
-		<title>Eat-Da-Burger!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/burgers.js"></script>
-	</head>
-	<body>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="/assets/css/burger_style.css" type="text/css" />
+	<title>Eat-Da-Burger!</title>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/assets/js/burgers.js"></script>
+</head>
+
+<body>
+	<div class="container">
+		<div class="text-center">
+			<img src="/assets/img/burger_img2.jpg" class="rounded" alt="burger image"  style="width: 600px; height: 400px;">
+			<h1>Eat-Da-Burger!</h1>
+		</div>
 		{{{ body }}}
-	</body>
+	</div>
+</body>
+
 </html>
